# assistax

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml  requirements.txt
assistax/: __init__.py
assistax/baselines/: crossplay_zoo.py  utils.py
assistax/baselines/IPPO/: ippo_aht.py  ippo_ff_nps.py  ippo_ff_ps.py  ippo_rnn_nps.py  ippo_rnn_ps.py  ippo_rnn_sweep.py  ippo_run.py  ippo_sweep.py  ippo_zoo_gen.py  render_ippo.py
assistax/baselines/IPPO/config/: ippo.yaml  ippo_ff_mabrax.yaml  ippo_mabrax_benchmark.yaml  ippo_mabrax_render.yaml  ippo_rnn_mabrax.yaml  ippo_sweep.yaml  ippo_zoo_gen.yaml
assistax/baselines/IPPO/config/network/: ff_nps.yaml
assistax/baselines/ISAC/: isac_ff_nps.py  isac_run.py  isac_sweep.py  render_isac.py
assistax/baselines/ISAC/config/: isac.yaml  isac_mabrax.yaml  isac_sweep.yaml
assistax/baselines/ISAC/config/network/: ff_ps.yaml
assistax/baselines/MAPPO/: mappo_aht.py  mappo_ff_nps.py  mappo_ff_ps.py  mappo_rnn_nps.py  mappo_rnn_ps.py  mappo_run.py  mappo_sweep.py  mappo_zoo_gen.py  render_mappo.py
assistax/baselines/MAPPO/config/: mappo.yaml  mappo_mabrax_zoo_gen.yaml  mappo_render.yaml  mappo_sweep.yaml  mappo_zoo_gen.yaml
assistax/baselines/MAPPO/config/network/: ff_nps.yaml  rnn_nps.yaml
assistax/baselines/MASAC/: eval_masac.py  masac_aht.py  masac_ff_nps.py  masac_run.py  masac_sweep.py  masac_zoo_gen.py  render_masac.py
assistax/baselines/MASAC/config/: masac.yaml  masac_aht.yaml  masac_sweep.yaml  masac_zoo_gen.yaml
assistax/baselines/MASAC/config/network/: ff_nps.yaml
assistax/baselines/ZSC/: crossplay_zoo.py  ppo_aht.py  sac_aht.py
assistax/baselines/ZSC/config/: ppo_aht.yaml  sac_aht.yaml
assistax/baselines/crossplay_config/: crossplay_zoo.yaml
assistax/envs/: __init__.py  armmanipulation.py  base.py  base_env.py  bedbathing.py  bedbathing_new.py  pushcoop.py  registration.py  scratchitch.py
assistax/envs/assets/: bed_scene_armmanip.xml  ma_pushT.xml  push_coop.xml  wheelchair_scene.xml
assistax/envs/assets/bed_assets/: panda_bare.xml
assistax/envs/assets/push_assets/: humanoid_bare_armmanip.xml  panda1_bare.xml  panda2_bare.xml  panda_bare.xml  panda_bare_armmanip.xml
assistax/envs/wrappers/: disable.py  training.py
assistax/envs/wrappers/pixels/: check_arrays.py  geom_primitives.py  rendering_utils.py
assistax/envs/wrappers/pixels/renderer/: geometry.py  model.py  pipeline.py  renderer.py  scene.py  shader.py  shadow.py  types.py  value_checker.py
assistax/envs/wrappers/pixels/renderer/shaders/: depth.py  gouraud.py  gouraud_texture.py  phong.py  phong_darboux.py  phong_reflection.py  phong_reflection_shadow.py
assistax/envs/wrappers/pixels/renderer/shapes/: capsule.py  cube.py
assistax/envs/wrappers/pixels/trimesh_jax/: __init__.py  base.py  boolean.py  bounds.py  caching.py  comparison.py  convex.py  creation.py  curvature.py  decomposition.py  geometry.py  graph.py  grouping.py  inertia.py  intersections.py  parent.py  permutate.py  poses.py  primitives.py  proximity.py  registration.py  remesh.py  repair.py  sample.py  transformations.py  triangles.py  typed.py  util.py
assistax/envs/wrappers/pixels/trimesh_jax/ray/: ray_triangle.py
assistax/envs/wrappers/pixels/trimesh_jax/scene/: scene.py
assistax/envs/wrappers/pixels/trimesh_jax/visual/: color.py  material.py  objects.py
assistax/render/: html.py  json.py
assistax/wrappers/: aht.py  baselines.py  training.py
baselines/: crossplay_zoo.py
baselines/IPPO/: ippo_aht.py  ippo_ff_nps.py  ippo_mabrax_aht.py  ippo_run.py  ippo_zoo_gen.py
baselines/IPPO/config/: ippo_mabrax.yaml  ippo_mabrax_aht.yaml  ippo_mabrax_zoo_gen.yaml
baselines/ISAC/: isac_run.py  render_isac.py
baselines/MAPPO/: mappo_aht.py  mappo_run.py  mappo_zoo_gen.py
baselines/MAPPO/config/: mappo_mabrax_aht.yaml  mappo_mabrax_zoo_gen.yaml
baselines/MASAC/: eval_masac.py  import os.py  masac_aht.py  masac_ff_nps_mabrax.py  masac_sweep.py  masac_zoo_gen.py  render_masac.py
baselines/MASAC/config/: masac_aht.yaml  masac_mabrax.yaml  masac_sweep.yaml  masac_zoo_gen.yaml
baselines/crossplay_config/: crossplay_zoo.yaml
baselines/crossplay_config/network/: rnn_ps.yaml
