[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assistax"
version = "0.1.0"
description = "Your JAX-based RL project with custom brax and jaxmarl forks"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11.11,<3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Researchers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # ⚠️  CRITICAL: All dependencies use exact versions (==) because JAX ecosystem is fragile
    # DO NOT change to >= unless you test thoroughly
    
    # CRITICAL: Core JAX ecosystem - exact versions to match your working environment
    "jax[cuda12]==0.4.37",
    # "jax==0.4.37",
    # "jaxlib==0.4.36",
    # "jax-cuda12-pjrt==0.4.36",
    # "jax-cuda12-plugin==0.4.36",
    # "jaxopt==0.8.5",
    "jaxtyping==0.3.2",
    # "flax==0.10.2",
    # "optax==0.2.5",
    # "chex==0.1.89",
    # "distrax==0.1.5",
    
    # Your custom forks (replace with your actual GitHub URLs)
    # "brax @ git+https://github.com/LeoHink/brax-assistax.git",
    # "jaxmarl @ git+https://github.com/LeoHink/JaxMARL-assistax.git",
    
    # RL and environment libraries - exact versions
    "gymnasium==1.2.0",
    "gymnax==0.0.6",
    "pettingzoo==1.25.0",
    "dm-env==1.6",
    "flashbax==0.1.3",
    "gym==0.26.2",
    "gym-notices==0.0.8",
    "farama-notifications==0.0.4",
    
    # Scientific computing - exact versions
    "numpy==1.26.4",
    "scipy==1.12.0",
    "pandas==2.3.0",
    "matplotlib==3.10.3",
    
    # Physics and rendering - exact versions
    "mujoco==3.2.6",
    "mujoco-mjx==3.2.6",
    "pygame==2.6.1",
    "pyopengl==3.1.9",
    "pytinyrenderer==0.0.14",
    "trimesh==4.6.13",
    "glfw==2.9.0",
    
    # ML utilities - exact versions
    "ml-collections==1.1.0",
    "ml-dtypes==0.5.1",
    "orbax-checkpoint==0.10.2",
    "safetensors==0.5.3",
    "tensorstore==0.1.75",
    "tensorflow-probability==0.25.0",
    
    # Configuration and utilities - exact versions
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    "dotmap==1.3.30",
    "tqdm==4.67.1",
    "rich==14.0.0",
    "humanize==4.12.3",
    "fsspec==2025.5.1",
    "cloudpickle==3.1.1",
    "msgpack==1.1.1",
    
    # Web framework - exact versions
    "flask==3.1.1",
    "flask-cors==6.0.1",
    
    # Tree utilities - exact versions
    "dm-tree==0.1.9",
    "etils==1.12.2",
    "toolz==1.0.0",
    "treescope==0.1.9",
    "wadler-lindig==0.1.7",
    
    # Other dependencies - exact versions
    "absl-py==2.3.0",
    "attrs==25.3.0",
    "click==8.2.1",
    "decorator==5.2.1",
    "gast==0.6.0",
    "jinja2==3.1.6",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "packaging==25.0",
    "pillow==11.3.0",
    "protobuf==6.31.1",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.2",
    "six==1.17.0",
    "typing-extensions==4.14.0",
    "wrapt==1.17.2",
    "opt-einsum==3.4.0",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "fonttools==4.58.4",
    "kiwisolver==1.4.8",
    "pyparsing==3.2.3",
    "pytz==2025.2",
    "tzdata==2025.2",
    "importlib-resources==6.5.2",
    "mdurl==0.1.2",
    "zipp==3.23.0",
    "nest-asyncio==1.6.0",
    "blinker==1.9.0",
    "itsdangerous==2.2.0",
    "werkzeug==3.1.3",
    "antlr4-python3-runtime==4.9.3",
    "simplejson==3.20.1",
    "grpcio==1.73.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "iniconfig==2.1.0",
    "pluggy==1.6.0",
    # Add other dev tools with flexible versions since they don't affect runtime
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
    "jupyter",
    "ipython",
]

# For monitoring and logging
monitoring = [
    "tensorboardx==2.6.4",
    "wandb",
]

# CUDA support - exact versions from your working environment
cuda = [
    "nvidia-cublas-cu12==12.9.1.4",
    "nvidia-cuda-cupti-cu12==12.9.79",
    "nvidia-cuda-nvcc-cu12==12.9.86",
    "nvidia-cuda-runtime-cu12==12.9.79",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.4.1.4",
    "nvidia-cusolver-cu12==11.7.5.82",
    "nvidia-cusparse-cu12==12.5.10.65",
    "nvidia-nccl-cu12==2.27.5",
    "nvidia-nvjitlink-cu12==12.9.86",
]

# [project.urls]
# Homepage = "https://github.com/yourusername/assistax"
# Repository = "https://github.com/yourusername/assistax"
# Issues = "https://github.com/yourusername/assistax/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["assistax*"]
exclude = ["tests*", "docs*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]